<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSaludo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_saludo"/>

        <Button
            android:id="@+id/btnDesconectar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_desconectar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotonesM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margen"
        app:layout_constraintTop_toBottomOf="@id/llUsuario">

        <Button
            android:id="@+id/btnSetValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_value"/>

        <Button
            android:id="@+id/btnProbarPudh"
            android:text="@string/btn_probar_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnUpdateC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_c"/>

        <Button
            android:id="@+id/btnSetValueO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_value_o"/>

        <Button
            android:id="@+id/btnUpdateChildObj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_upd_chil_obj"/>

        <Button
            android:id="@+id/btnSetValueModif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_value_modif"/>

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove"/>

        <Button
            android:id="@+id/btnPruebaLeer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prueba_leer"/>

        <Button
            android:id="@+id/btnLeerOrdenado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_leer_ordenado"/>

        <Button
            android:id="@+id/btnStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_storage"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>