<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etALoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/hint_et_alogin_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etALoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etALoginEmail"
        android:layout_marginTop="@dimen/margen"
        android:hint="@string/hint_et_alogin_pass"
        android:inputType="textPassword"/>

    <LinearLayout
        android:id="@+id/llALoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/etALoginPass"
        android:layout_marginTop="@dimen/margen">

        <Button
            android:id="@+id/btnALoginAcceder"
            android:text="@string/btn_alogin_acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margen_btn"/>

        <Button
            android:id="@+id/btnALoginRegistrar"
            android:text="@string/btn_alogin_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margen_btn"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>